--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,28 @@ coverage*/
 *.exe
 *.dll
 *.pdb
+/Quiz_Portal/bin/Debug/net10.0/cs/Microsoft.CodeAnalysis.CSharp.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/cs/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/cs/Microsoft.CodeAnalysis.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/cs/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/cs/Microsoft.CodeAnalysis.Workspaces.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/de/Microsoft.CodeAnalysis.CSharp.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/de/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/de/Microsoft.CodeAnalysis.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/de/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/de/Microsoft.CodeAnalysis.Workspaces.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/es/Microsoft.CodeAnalysis.CSharp.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/es/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/es/Microsoft.CodeAnalysis.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/es/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/es/Microsoft.CodeAnalysis.Workspaces.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/fr/Microsoft.CodeAnalysis.CSharp.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/fr/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/fr/Microsoft.CodeAnalysis.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/fr/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/fr/Microsoft.CodeAnalysis.Workspaces.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/it/Microsoft.CodeAnalysis.CSharp.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/it/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/it/Microsoft.CodeAnalysis.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/it/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+/Quiz_Portal/bin/Debug/net10.0/it/Microsoft.CodeAnalysis.Workspaces.resources.dll
