Translation from english to arabic has been resolved!

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,6 @@ coverage*/
 /Quiz_Portal/bin/Debug/net10.0/it/Microsoft.CodeAnalysis.resources.dll
 /Quiz_Portal/bin/Debug/net10.0/it/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
 /Quiz_Portal/bin/Debug/net10.0/it/Microsoft.CodeAnalysis.Workspaces.resources.dll
+/.vs/Quiz_Portal.slnx/FileContentIndex/024474e6-bd8f-4f8a-89cd-3d384036e5b1.vsidx
+/.vs/Quiz_Portal.slnx/FileContentIndex/46bba888-7364-4313-a877-fdf356a87fbd.vsidx
+/.vs/Quiz_Portal.slnx/config/applicationhost.config
